# amazon-scrape

./: pyproject.toml  scrape.py
