[tool.poetry]
name = "madtracker"
version = "0.1.0"
description = ""
authors = ["TK-ed <tharunstark11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
